--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tiptap/core": "^2.5.8",
+    "@tiptap/extension-color": "^2.5.8",
     "@tiptap/extension-link": "^2.5.7",
+    "@tiptap/extension-text-style": "^2.5.8",
     "@tiptap/pm": "^2.5.7",
     "@tiptap/starter-kit": "^2.5.7",
     "@tiptap/vue-3": "^2.5.7",
