--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@tiptap/core": "^2.5.8",
     "@tiptap/extension-color": "^2.5.8",
     "@tiptap/extension-link": "^2.5.7",
+    "@tiptap/extension-subscript": "^2.5.8",
+    "@tiptap/extension-superscript": "^2.5.8",
+    "@tiptap/extension-text-align": "^2.5.8",
     "@tiptap/extension-text-style": "^2.5.8",
     "@tiptap/pm": "^2.5.7",
     "@tiptap/starter-kit": "^2.5.7",
